--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.19/lib/jfreechart-1.0.19-swt.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar" sourcepath="libs/jfreechart-1.0.19/source"/>
+	<classpathentry kind="lib" path="libs/mysql-connector-java-5.1.39-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 	<referencedentry kind="lib" path="libs/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar" sourcepath="libs/jfreechart-1.0.19/source"/>
 </classpath>
