Успешный переход (а точнее сказать возврат) на jfreechart

--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="libs/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="libs/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="libs/jfreechart-1.0.19.jar" sourcepath="libs/jfreechart-1.0.19.zip"/>
 	<classpathentry kind="output" path="bin"/>
 	<referencedentry kind="lib" path="libs/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar" sourcepath="libs/jfreechart-1.0.19/source"/>
 </classpath>
